src/main/java/com/emmanuele/protocol_log/parser/protocol_log/ProtocolLogParser.java
// Generated from src/main/java/com/emmanuele/protocol_log/parser/protocol_log/ProtocolLog.g4 by ANTLR 4.7.2
package com.emmanuele.protocol_log.parser.protocol_log;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProtocolLogParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, DASHED_STRING=76, EMPTY_VALUE=77, UUID=78, VERSION=79, 
		IP=80, INTEGER=81, DOUBLE=82, DATE=83, TIME=84, STRING=85, QUOTED_STRING=86, 
		HEX_DIGIT=87, DIGIT=88, LOW_CASE_LETTER=89, UP_CASE_LETTER=90, NL=91, 
		WS=92;
	public static final int
		RULE_file = 0, RULE_logEntry = 1, RULE_header = 2, RULE_host = 3, RULE_localComponent = 4, 
		RULE_component = 5, RULE_componentName = 6, RULE_systemName = 7, RULE_direction = 8, 
		RULE_path = 9, RULE_messageType = 10, RULE_remoteComponent = 11, RULE_message = 12, 
		RULE_messageHeader = 13, RULE_objectBody = 14, RULE_pair = 15, RULE_protocolType = 16, 
		RULE_fieldKey = 17, RULE_identifiedFieldKey = 18, RULE_value = 19, RULE_uuidValue = 20, 
		RULE_namedUuid = 21, RULE_enumTypedValue = 22, RULE_booleanValue = 23, 
		RULE_integerTypedValue = 24, RULE_integerValue = 25, RULE_doubleValue = 26, 
		RULE_datetimeValue = 27, RULE_timestampValue = 28, RULE_streamMessageIdentifiersValue = 29, 
		RULE_filterValue = 30, RULE_condition = 31, RULE_stringValue = 32, RULE_anyValue = 33, 
		RULE_requestTypeValue = 34, RULE_parametersValue = 35, RULE_viidValue = 36, 
		RULE_vectorValue = 37, RULE_uuidVector = 38, RULE_booleanVector = 39, 
		RULE_integerVectorPair = 40, RULE_anyVector = 41, RULE_uint32Vector = 42, 
		RULE_messageVector = 43, RULE_tableValue = 44, RULE_table = 45, RULE_row = 46, 
		RULE_rowId = 47, RULE_column = 48, RULE_tableCellValue = 49, RULE_errorDoubleValue = 50, 
		RULE_columnsRequest = 51, RULE_columnRequest = 52, RULE_columnRequestWithParams = 53, 
		RULE_rowRequestsList = 54, RULE_parametersRequest = 55, RULE_rowRequest = 56, 
		RULE_rowRequestWithParams = 57, RULE_rowRequestKey = 58, RULE_rowKeyValue = 59, 
		RULE_overrides = 60, RULE_overriddenParameters = 61;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "logEntry", "header", "host", "localComponent", "component", 
			"componentName", "systemName", "direction", "path", "messageType", "remoteComponent", 
			"message", "messageHeader", "objectBody", "pair", "protocolType", "fieldKey", 
			"identifiedFieldKey", "value", "uuidValue", "namedUuid", "enumTypedValue", 
			"booleanValue", "integerTypedValue", "integerValue", "doubleValue", "datetimeValue", 
			"timestampValue", "streamMessageIdentifiersValue", "filterValue", "condition", 
			"stringValue", "anyValue", "requestTypeValue", "parametersValue", "viidValue", 
			"vectorValue", "uuidVector", "booleanVector", "integerVectorPair", "anyVector", 
			"uint32Vector", "messageVector", "tableValue", "table", "row", "rowId", 
			"column", "tableCellValue", "errorDoubleValue", "columnsRequest", "columnRequest", 
			"columnRequestWithParams", "rowRequestsList", "parametersRequest", "rowRequest", 
			"rowRequestWithParams", "rowRequestKey", "rowKeyValue", "overrides", 
			"overriddenParameters"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "':'", "']'", "'protocol'", "'.'", "'<debug>'", "'('", "')'", 
			"'Received'", "'Send'", "'local'", "'@'", "'/'", "'in'", "'out'", "'<message>'", 
			"','", "'<protocol>'", "'<size>'", "'{'", "'}'", "'='", "'<uuid>'", "'<strategy state>'", 
			"'<calculated values request>'", "'<grid view selection usage>'", "'<grid view filter logical operation>'", 
			"'<grid view filter condition type>'", "'<grid row data type>'", "'<grid view mode>'", 
			"'<grid view row scope>'", "'<instrument market data status>'", "'<instrument trading phase>'", 
			"'<instrument trading status>'", "'<surplus direction>'", "'<trend>'", 
			"'<status>'", "'<subscription type>'", "'<boolean>'", "'true'", "'false'", 
			"'<integer>'", "'<uinteger>'", "'<uint64>'", "'<uint32>'", "'<int32>'", 
			"'<double>'", "'<doublevalue>'", "'<datetime>'", "'''", "'<filter>'", 
			"'&&'", "'||'", "'>'", "'>='", "'=='", "'<='", "'<'", "'<string>'", "'<any>'", 
			"'<parameters>'", "'<viid>'", "';'", "'<vector of uuid>'", "'<vector of boolean>'", 
			"'<vector of any>'", "'<vector of uint32>'", "'<vector of message>'", 
			"'<table values>'", "'<error double>'", "'Columns'", "'UPDATE'", "'Rows'", 
			"'Parameters'", "'Overrides'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "DASHED_STRING", "EMPTY_VALUE", "UUID", "VERSION", 
			"IP", "INTEGER", "DOUBLE", "DATE", "TIME", "STRING", "QUOTED_STRING", 
			"HEX_DIGIT", "DIGIT", "LOW_CASE_LETTER", "UP_CASE_LETTER", "NL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProtocolLog.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProtocolLogParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ProtocolLogParser.EOF, 0); }
		public List<LogEntryContext> logEntry() {
			return getRuleContexts(LogEntryContext.class);
		}
		public LogEntryContext logEntry(int i) {
			return getRuleContext(LogEntryContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DATE) {
				{
				{
				setState(124);
				logEntry();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogEntryContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public MessageContext message() {
			return getRuleContext(MessageContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(ProtocolLogParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(ProtocolLogParser.NL, i);
		}
		public LogEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logEntry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).enterLogEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).exitLogEntry(this);
		}
	}

	public final LogEntryContext logEntry() throws RecognitionException {
		LogEntryContext _localctx = new LogEntryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_logEntry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			header();
			setState(134); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(133);
				match(NL);
				}
				}
				setState(136); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NL );
			setState(138);
			message();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(139);
				match(NL);
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TimestampValueContext timestampValue() {
			return getRuleContext(TimestampValueContext.class,0);
		}
		public HostContext host() {
			return getRuleContext(HostContext.class,0);
		}
		public LocalComponentContext localComponent() {
			return getRuleContext(LocalComponentContext.class,0);
		}
		public List<TerminalNode> INTEGER() { return getTokens(ProtocolLogParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(ProtocolLogParser.INTEGER, i);
		}
		public DirectionContext direction() {
			return getRuleContext(DirectionContext.class,0);
		}
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public MessageTypeContext messageType() {
			return getRuleContext(MessageTypeContext.class,0);
		}
		public TerminalNode STRING() { return getToken(ProtocolLogParser.STRING, 0); }
		public RemoteComponentContext remoteComponent() {
			return getRuleContext(RemoteComponentContext.class,0);
		}
		public TerminalNode IP() { return getToken(ProtocolLogParser.IP, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			timestampValue();
			setState(146);
			host();
			setState(147);
			localComponent();
			setState(148);
			match(T__0);
			setState(149);
			match(INTEGER);
			setState(150);
			match(T__1);
			setState(151);
			match(INTEGER);
			setState(152);
			match(T__2);
			setState(153);
			match(T__3);
			setState(154);
			match(T__4);
			setState(155);
			direction();
			setState(156);
			match(T__5);
			setState(157);
			path();
			setState(158);
			match(T__6);
			setState(159);
			match(INTEGER);
			setState(160);
			match(T__7);
			setState(161);
			match(T__1);
			setState(162);
			_la = _input.LA(1);
			if ( !(_la==T__8 || _la==T__9) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(163);
			messageType();
			setState(164);
			match(STRING);
			setState(165);
			remoteComponent();
			setState(166);
			match(T__0);
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(167);
				match(T__10);
				}
			}

			setState(170);
			match(IP);
			setState(171);
			match(T__1);
			setState(172);
			match(INTEGER);
			setState(173);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HostContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(ProtocolLogParser.STRING, 0); }
		public HostContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_host; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).enterHost(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).exitHost(this);
		}
	}

	public final HostContext host() throws RecognitionException {
		HostContext _localctx = new HostContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_host);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalComponentContext extends ParserRuleContext {
		public ComponentContext component() {
			return getRuleContext(ComponentContext.class,0);
		}
		public LocalComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localComponent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).enterLocalComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).exitLocalComponent(this);
		}
	}

	public final LocalComponentContext localComponent() throws RecognitionException {
		LocalComponentContext _localctx = new LocalComponentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_localComponent);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			component();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentContext extends ParserRuleContext {
		public List<ComponentNameContext> componentName() {
			return getRuleContexts(ComponentNameContext.class);
		}
		public ComponentNameContext componentName(int i) {
			return getRuleContext(ComponentNameContext.class,i);
		}
		public TerminalNode VERSION() { return getToken(ProtocolLogParser.VERSION, 0); }
		public SystemNameContext systemName() {
			return getRuleContext(SystemNameContext.class,0);
		}
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).exitComponent(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_component);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			componentName();
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(180);
				match(T__6);
				setState(181);
				match(VERSION);
				setState(182);
				match(T__7);
				}
			}

			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(185);
				match(T__11);
				setState(186);
				systemName();
				}
			}

			setState(191);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(189);
				match(T__12);
				setState(190);
				componentName();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentNameContext extends ParserRuleContext {
		public TerminalNode DASHED_STRING() { return getToken(ProtocolLogParser.DASHED_STRING, 0); }
		public TerminalNode STRING() { return getToken(ProtocolLogParser.STRING, 0); }
		public ComponentNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).enterComponentName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).exitComponentName(this);
		}
	}

	public final ComponentNameContext componentName() throws RecognitionException {
		ComponentNameContext _localctx = new ComponentNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_componentName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			_la = _input.LA(1);
			if ( !(_la==DASHED_STRING || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SystemNameContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(ProtocolLogParser.STRING, 0); }
		public SystemNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).enterSystemName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).exitSystemName(this);
		}
	}

	public final SystemNameContext systemName() throws RecognitionException {
		SystemNameContext _localctx = new SystemNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_systemName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectionContext extends ParserRuleContext {
		public DirectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_direction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).enterDirection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).exitDirection(this);
		}
	}

	public final DirectionContext direction() throws RecognitionException {
		DirectionContext _localctx = new DirectionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_direction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			_la = _input.LA(1);
			if ( !(_la==T__13 || _la==T__14) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(ProtocolLogParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(ProtocolLogParser.STRING, i);
		}
		public PathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).enterPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProtocolLogListener ) ((ProtocolLogListener)listener).exitPath(this);
		}
	}
